WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
139145
When invalidating fullscreen, cancel instead of stop optimizedFullscfreen.
https://bugs.webkit.org/show_bug.cgi?id=139145
Summary
When invalidating fullscreen, cancel instead of stop optimizedFullscfreen.
Jeremy Jones
Reported
2014-12-01 12:49:46 PST
When invalidating fullscreen, cancel instead of stop optimizedFullscfreen.
Attachments
Patch
(1.56 KB, patch)
2014-12-01 12:51 PST
,
Jeremy Jones
eric.carlson
: review+
Details
Formatted Diff
Diff
Patch for landing.
(1.61 KB, patch)
2014-12-09 02:58 PST
,
Jeremy Jones
no flags
Details
Formatted Diff
Diff
Patch for landing.
(2.54 KB, patch)
2014-12-09 03:01 PST
,
Jeremy Jones
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jeremy Jones
Comment 1
2014-12-01 12:51:07 PST
Created
attachment 242334
[details]
Patch
Jeremy Jones
Comment 2
2014-12-01 12:51:45 PST
rdar://problem/18957744
Jeremy Jones
Comment 3
2014-12-09 02:58:02 PST
Created
attachment 242902
[details]
Patch for landing.
Jeremy Jones
Comment 4
2014-12-09 03:01:48 PST
Created
attachment 242903
[details]
Patch for landing.
WebKit Commit Bot
Comment 5
2014-12-09 04:42:47 PST
Comment on
attachment 242903
[details]
Patch for landing. Clearing flags on attachment: 242903 Committed
r177017
: <
http://trac.webkit.org/changeset/177017
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug