When invalidating fullscreen, cancel instead of stop optimizedFullscfreen. https://bugs.webkit.org/show_bug.cgi?id=139145

Patch by Jeremy Jones <jeremyj@apple.com> on 2014-12-09
Reviewed by Eric Carlson.

* platform/ios/WebVideoFullscreenInterfaceAVKit.mm:
(WebVideoFullscreenInterfaceAVKit::invalidate): call cancel instead of stop
* platform/spi/ios/AVKitSPI.h: add -cancelOptimizedFullscreen.

Canonical link: https://commits.webkit.org/157294@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@177017 268f45cc-cd09-0410-ab3c-d52691b4dbfc