Source/WebCore/platform/spi/ios/AVKitSPI.h
@@ -86,6 +86,7 @@ typedef NSInteger AVPlayerViewControllerOptimizedFullscreenStopReason;
 
 - (void)startOptimizedFullscreenWithStartCompletionHandler:(void (^)(BOOL success, NSError*))startCompletionHandler stopCompletionHandler:(void (^)(AVPlayerViewControllerOptimizedFullscreenStopReason))stopCompletionHandler;
 - (void)stopOptimizedFullscreen;
+- (void)cancelOptimizedFullscreen;
 - (void)setAllowsOptimizedFullscreen:(BOOL)allowsOptimizedFullscreen;
 
 @property (nonatomic, strong) AVPlayerController *playerController;
